# fmc

./: .gitignore  README.md
client/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
client/api/: Cargo.toml
client/api/src/: api.wit  lib.rs  transform.rs
client/src/: audio.rs  blocks.rs  cli.rs  game_state.rs  main.rs  models.rs  networking.rs  particles.rs  settings.rs  singleplayer.rs  utils.rs
client/src/assets/: block_textures.rs  materials.rs  mod.rs  models.rs  particles.rs  plugins.rs
client/src/modding/: mod.rs
client/src/modding/server/: mod.rs
client/src/modding/server_builder/: mod.rs
client/src/player/: camera.rs  mod.rs  movement.rs  physics.rs
client/src/rendering/: chunk.rs  clouds.rs  lighting.rs  materials.rs  mod.rs  models.rs  sky.rs  world.rs
client/src/rendering/materials/: block_material.rs  mod.rs  model_material.rs  particle_material.rs  pbr_material.rs  sky_material.rs
client/src/rendering/shaders/: block.wgsl  block_mesh.wgsl  blocks.wgsl  clouds.wgsl  clouds_post.wgsl  mesh_prepass.wgsl  models.wgsl  particles.wgsl  pbr.wgsl  pbr_mesh.wgsl  pbr_prepass.wgsl  physical_sky.wgsl  sky.wgsl
client/src/ui/: hand.rs  mod.rs  text_input.rs  widgets.rs
client/src/ui/client/: connecting.rs  login.rs  main_menu.rs  main_menu2.rs  mod.rs  pause.rs  pause_menu.rs  widgets.rs  world_configuration.rs
client/src/ui/gui/: connecting.rs  login.rs  main_menu.rs  mod.rs  multiplayer.rs  pause_menu.rs
client/src/ui/server/: items.rs  key_bindings.rs  mod.rs  text.rs  textbox.rs
client/src/utils/: mod.rs
client/src/world/: blocks.rs  chunk.rs  chunk_manager.rs  mod.rs  models.rs  world_map.rs
client/src/world/world_map/: chunk.rs  chunk_manager.rs  mod.rs
crates/fmc/: Cargo.toml
crates/fmc/src/: assets.rs  chat.rs  interfaces.rs  lib.rs  networking.rs
crates/fmc/src/bevy_extensions/: mod.rs
crates/fmc/src/physics/: mod.rs  shapes.rs
crates/fmc/src/world/: chunk_manager.rs  mod.rs
crates/fmc/src/world/terrain_generation/: blueprints.rs
crates/fmc_networking/: Cargo.toml
crates/fmc_networking/fmc_networking_derive/: Cargo.toml
crates/fmc_networking/fmc_networking_derive/src/: lib.rs
crates/fmc_networking/src/: client.rs  error.rs  lib.rs  network_message.rs  server.rs
crates/fmc_networking/src/messages/: assets.rs  audio.rs  blocks.rs  chunk.rs  connection.rs  interfaces.rs  mod.rs  models.rs  player.rs
crates/fmc_noise/: Cargo.toml
crates/fmc_noise/benches/: benchmark.rs
crates/fmc_noise/src/: abs.rs  add.rs  clamp.rs  constant.rs  fbm.rs  gradient.rs  lerp.rs  lib.rs  main.rs  min_and_max.rs  mul.rs  noise_tree.rs  perlin.rs  range.rs  simplex.rs  square.rs
examples/mod/: Cargo.toml  README.md
examples/mod/src/: lib.rs  main.rs
examples/server_mod/: Cargo.toml  README.md
examples/server_mod/src/: lib.rs
fmc/: Cargo.toml
fmc/src/: assets.rs  blocks.rs  chat.rs  database.rs  interfaces.rs  lib.rs  models.rs  networking.rs  particle_effects.rs  players.rs  random.rs  terminal.rs  utils.rs
fmc/src/bevy_extensions/f64_transform/: mod.rs  systems.rs
fmc/src/bevy_extensions/f64_transform/components/: global_transform.rs  transform.rs
fmc/src/items/: mod.rs
fmc/src/physics/: mod.rs  shapes.rs
fmc/src/world/: chunk.rs  chunk_manager.rs  map.rs  mod.rs  terrain_generation.rs
fmc/src/world/terrain_generation/: blueprints.rs  mod.rs
fmc_protocol/: Cargo.toml
fmc_protocol/fmc_protocol_derive/: Cargo.toml
fmc_protocol/fmc_protocol_derive/src/: lib.rs
fmc_protocol/src/: lib.rs  network_message.rs
fmc_protocol/src/messages/: assets.rs  audio.rs  blocks.rs  chunk.rs  connection.rs  interfaces.rs  mod.rs  models.rs  particles.rs  player.rs  plugins.rs
server/: .gitignore  Cargo.toml  build.rs  server_settings.txt
server/resources/client/: STRUCTURE.md  commands.json
server/resources/client/blocks/: air.json  coal_ore.json  crafting_table.json  default_block.json  dirt.json  grass.json  leaves.json  oak.json  oak_planks.json  sand.json  soil.json  stone.json  torch.json  wheat_0.json  wheat_1.json  wheat_2.json  wheat_3.json  wheat_4.json  wheat_5.json  wheat_6.json  wheat_7.json
server/resources/client/blocks/water/: diagonal_water_1.json  diagonal_water_2.json  diagonal_water_3.json  diagonal_water_4.json  diagonal_water_5.json  diagonal_water_6.json  diagonal_water_7.json  diagonal_water_corner_down_1.json  diagonal_water_corner_down_2.json  diagonal_water_corner_down_3.json  diagonal_water_corner_down_4.json  diagonal_water_corner_down_5.json  diagonal_water_corner_down_6.json  diagonal_water_corner_down_7.json  diagonal_water_corner_down_8.json  diagonal_water_corner_up_1.json  diagonal_water_corner_up_2.json  diagonal_water_corner_up_3.json  diagonal_water_corner_up_4.json  diagonal_water_corner_up_5.json  diagonal_water_corner_up_6.json  diagonal_water_corner_up_7.json  diagonal_water_corner_up_8.json  still_water_1.json  still_water_10.json  still_water_2.json  still_water_3.json  still_water_4.json  still_water_5.json  still_water_6.json  still_water_7.json  still_water_8.json  still_water_9.json  straight_water_1.json  straight_water_2.json  straight_water_3.json  straight_water_4.json  straight_water_5.json  straight_water_6.json  straight_water_7.json  (+11 more)
server/resources/client/interfaces/: chat.json  crafting_table.json  death.json  hotbar.json  inventory.json
server/resources/client/items/configurations/: bread.json  (+12 more)
server/resources/client/languages/: english
server/resources/client/materials/: block.json  leaves.json  transparent.json  water.json
server/resources/server/blueprints/: coal_ore.json  distribute_trees.json  tree.json
server/src/: assets.rs  main.rs  settings.rs  skybox.rs
server/src/items/: bread.rs  ground_items.rs  hoes.rs  mod.rs  seeds.rs
server/src/items/crafting/: mod.rs  shaped.rs
server/src/mobs/: duck.rs  mod.rs  pathfinding.rs
server/src/players/: hand.rs  health.rs  inventory_interface.rs  mod.rs
server/src/world/: biomes.rs  mod.rs  terrain_generation.rs
server/src/world/blocks/: crafting_table.rs  mod.rs  water.rs  wheat.rs
(+118 files in other folders)
