[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.15.1", features = ["serialize"]}

fmc_protocol = { version = "0.1.1", git = "https://github.com/formulaicgame/fmc_protocol" }
serde_json = "1.0.128"

dirs = "5.0.1"
serde = "1.0.188"
zstd = "0.12.4"
tar = "0.4.40"
image = "0.24.7"
bitflags = "2.4.0"
ureq = "2.12.1"
crossbeam = { version = "0.5.14", package = "crossbeam-channel" }
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive"] }
wasmtime = "29.0.1"

[build-dependencies]
tar = "0.4.40"
zstd = "0.12.4"

# Enable a small amount of optimization in debug mode
[profile.dev]
strip = "debuginfo"
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
#https://github.com/bevyengine/bevy/issues/14291
debug-assertions = false

[profile.release]
strip = true
# Decreases linux binary size by 33% but increases compile time by a lot
#lto = true

# flamegraph
#[profile.release]
#debug=true
