[package]
name = "client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17.2", features = ["serialize", "file_watcher"]}

fmc_protocol = { path = "../fmc_protocol", version = "0.1.3" }
fmc_noise = "0.3.2"

serde_json = "1.0.150"
dirs = "6.0.0"
serde = "1.0.228"
zstd = "0.13.3"
tar = "0.4.46"
image = "0.25.10"
bitflags = "2.13.0"
ureq = "3.3.0"
crossbeam = { version = "0.5.15", package = "crossbeam-channel" }
bincode = "1.3.3"
clap = { version = "4.6.1", features = ["derive"] }
wasmtime = "=46.0.1"

rusqlite = { version = "0.34.0", features = ["bundled"]}

# cloud rendering only
nonmax = "0.5.5"

[build-dependencies]
tar = "0.4.46"
zstd = "0.13.3"

# Enable a small amount of optimization in debug mode
[profile.dev]
strip = "debuginfo"
#opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# https//github.com/bevyengine/bevy/issues/14291
debug-assertions = false

[profile.release]
strip = true
# Decreases linux binary size by 33% but increases compile time by a lot
#lto = true

# flamegraph
#[profile.release]
#debug=true
