[package]
name = "fmc"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/formulaicgame/fmc"
description = "Library for creating fmc servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc1f33d", default-features=false, features = ["filesystem_watcher", "multi-threaded"]}
bevy = { version = "0.15.1", default-features=false, features = ["file_watcher", "multi_threaded", "serialize"]}

fmc_protocol = { version = "0.1.3", git = "https://github.com/formulaicgame/fmc_protocol" } 
fmc_noise = "0.3.0" 

gltf = "1.4.1"
tar = "0.4.40"
zstd = "0.13.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.128"
bincode = "1.3.3"
rusqlite = { version = "0.34.0", features = ["bundled"]}
rand = "0.8.5"
once_cell = "1.18.0"
indexmap = "2.2.6"

# flamegraph
#[profile.release]
#debug=true
