[package]
name = "fmc"
version = "0.0.5"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/formulaicgame/fmc"
description = "Library for creating fmc servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.16.1", default-features=false, features = ["file_watcher", "multi_threaded", "serialize", "bevy_log"]}

fmc_protocol = { path = "../fmc_protocol", version = "0.1.3" } 
fmc_noise = "0.3.0" 

gltf = "1.4.1"
tar = "0.4.40"
zstd = "0.13.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.128"
bincode = "1.3.3"
rusqlite = { version = "0.34.0", features = ["bundled"]}
once_cell = "1.18.0"
# TODO: Can be removed with https://github.com/rust-lang/rust/issues/126840
crossbeam = { version = "0.5.14", package = "crossbeam-channel" }

# flamegraph
#[profile.release]
#debug=true
