[package]
name = "fmc"
version = "0.0.5"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/formulaicgame/fmc"
description = "Library for creating fmc servers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17.2", default-features=false, features = ["file_watcher", "multi_threaded", "serialize", "bevy_log", "debug"]}

fmc_protocol = { path = "../fmc_protocol", version = "0.1.3" } 
fmc_noise = "0.3.2" 

gltf = "1.4.1"
tar = "0.4.46"
zstd = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bincode = "1.3.3"
rusqlite = { version = "0.40.1", features = ["bundled"]}
once_cell = "1.21.4"
# TODO: Can be removed with https://github.com/rust-lang/rust/issues/126840
crossbeam = { version = "0.5.15", package = "crossbeam-channel" }

# flamegraph
#[profile.release]
#debug=true
