[package]
name = "fmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bevy = { git = "https://github.com/bevyengine/bevy", rev = "bc1f33d", default-features=false, features = ["filesystem_watcher", "multi-threaded"]}
bevy = { version = "0.13.2", default-features=false, features = ["file_watcher", "multi-threaded"]}

fmc_networking = { path = "../fmc_networking" }
serde_json = { path = "../json"}
noise = { path = "../fmc_noise" }

gltf = "1.4.1"
tar = "0.4.40"
zstd = "0.12.4"
sha-1 = "0.10.1"
serde = { version = "1.0.188", features = ["derive"] }
#serde_json = "1.0.117"
bincode = "1.3.3"
typetag = "0.2.13"
futures-lite = "1.13.0"
rusqlite = "0.29.0"
rand = "0.8.5"
once_cell = "1.18.0"
indexmap = "2.2.6"

# flamegraph
#[profile.release]
#debug=true
