[package]
name = "example_mod"
version = "0.1.0"
edition = "2024"

[dependencies]
# TODO: Use cargo dependency when published
#
# Depend on the game you want to mod
fmc_beta = { git = "https://github.com/formulaicgame/fmc_beta" }

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
