[package]
name = "fmc_example_mod"
license = "MIT OR Apache-2.0"
description = "fmc example mod"
version = "0.1.1"
edition = "2024"

[dependencies]
# Depend on the game you want to mod
fmc_vanilla = { version = "0.1.1" }

# Enable high optimizations for dependencies
[profile.dev.package."*"]
opt-level = 3
